--- a/TicTacDoh/app/src/main/res/values/resources.xml
+++ b/TicTacDoh/app/src/main/res/values/resources.xml
@@ -28,6 +28,7 @@
     <style name="WillyListTheme" parent="WillyTheme">
         <item name="windowActionBar">false</item>
         <item name="android:windowTitleSize">55dp</item>
+        <item name="android:windowNoTitle">false</item>
     </style>
 
     <!--
